leo3/tests/ui/invalid_lifetime.stderr
error: lifetime may not live long enough
  --> tests/ui/invalid_lifetime.rs:11:13
   |
10 |         let result = leo3::with_lean(|lean| {
   |                                       ----- return type of closure is Result<LeanBound<'2, leo3::types::LeanNat>, LeanError>
   |                                       |
   |                                       has type `Lean<'1>`
11 |             LeanNat::from_usize(lean, 42)
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'2`
